# ScoreAPI

./: .env  Cargo.toml  README.md
migrations/2019-07-13-220822_game/: up.sql
migrations/2019-07-21-200822_player/: up.sql
migrations/2019-07-21-210907_score/: up.sql
src/: game_repo.rs  game_routes.rs  main.rs  models.rs  player_repo.rs  schema.rs  score_repo.rs
